--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CiberDev</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' panchodev.site;
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.panchodev.site https://*.githubusercontent.com;
+    style-src 'self' 'unsafe-inline' https://*.panchodev.site;
+    img-src 'self' data: https: https://*.panchodev.site https://*.githubusercontent.com;
+    connect-src 'self' https://api.github.com https://*.panchodev.site https://*.githubusercontent.com wss: ws:;
+    font-src 'self' data: https://fonts.gstatic.com;
+    manifest-src 'self';
+    form-action 'self';
+    frame-ancestors 'none';
+    base-uri 'self';
+    object-src 'none'" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <title>PanchoDev</title>
 </head>
 
 <body>
