--- a/index.html
+++ b/index.html
@@ -4,20 +4,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' panchodev.site;
-    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.panchodev.site https://*.githubusercontent.com;
-    style-src 'self' 'unsafe-inline' https://*.panchodev.site;
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self' panchodev.site;
+    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.panchodev.site https://*.githubusercontent.com https://*.emailjs.com;
+    style-src 'self' 'unsafe-inline' https://*.panchodev.site https://fonts.googleapis.com;
     img-src 'self' data: https: https://*.panchodev.site https://*.githubusercontent.com;
-    connect-src 'self' https://api.github.com https://*.panchodev.site https://*.githubusercontent.com wss: ws:;
+    connect-src 'self' https://api.github.com https://*.panchodev.site https://*.githubusercontent.com https://api.emailjs.com wss: ws:;
     font-src 'self' data: https://fonts.gstatic.com;
     manifest-src 'self';
     form-action 'self';
     frame-ancestors 'none';
     base-uri 'self';
     object-src 'none'" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+
+  <!-- Primary Meta Tags -->
   <title>PanchoDev</title>
-  <script type="module" crossorigin src="/assets/index.WO53ECNk.js"></script>
+  <meta name="title" content="PanchoDev - Desarrollo Web" />
+  <meta name="description" content="PanchoDev - Desarrollo y Soluciones Web Profesionales" />
+  <meta name="theme-color" content="#7C3AED" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://panchodev.site/" />
+  <meta property="og:title" content="PanchoDev - Desarrollo Web" />
+  <meta property="og:description" content="PanchoDev - Desarrollo y Soluciones Web Profesionales" />
+  <meta property="og:image" content="/favicon.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://panchodev.site/" />
+  <meta property="twitter:title" content="PanchoDev - Desarrollo Web" />
+  <meta property="twitter:description" content="PanchoDev - Desarrollo y Soluciones Web Profesionales" />
+  <meta property="twitter:image" content="/favicon.png" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  <script type="module" crossorigin src="/assets/index.CWSWBzPI.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/index.DpzWIw8I.css">
 </head>
 
