--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 
   <!-- Manifest -->
   <link rel="manifest" href="/manifest.json" />
-  <script type="module" crossorigin src="/assets/index.CWSWBzPI.js"></script>
+  <script type="module" crossorigin src="/assets/index.BO2QF43i.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/react-vendor.Sn9SkICy.js">
+  <link rel="modulepreload" crossorigin href="/assets/email-vendor.CkJVEpD4.js">
+  <link rel="modulepreload" crossorigin href="/assets/ui-vendor.CQUWN__O.js">
+  <link rel="modulepreload" crossorigin href="/assets/animation-vendor.CMIWJup0.js">
   <link rel="stylesheet" crossorigin href="/assets/index.DpzWIw8I.css">
 </head>
 
