--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
   <!-- Manifest -->
   <link rel="manifest" href="/manifest.json" />
-  <script type="module" crossorigin src="/assets/index.DHhB26HQ.js"></script>
+  <script type="module" crossorigin src="/assets/index.CbaHUSXR.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/react-vendor.Sn9SkICy.js">
   <link rel="modulepreload" crossorigin href="/assets/email-vendor.CkJVEpD4.js">
-  <link rel="modulepreload" crossorigin href="/assets/ui-vendor.CQUWN__O.js">
+  <link rel="modulepreload" crossorigin href="/assets/ui-vendor.CL6GA75k.js">
   <link rel="modulepreload" crossorigin href="/assets/animation-vendor.CMIWJup0.js">
   <link rel="stylesheet" crossorigin href="/assets/index.DpzWIw8I.css">
 </head>
